# occa.deprecated

./: CMakeLists.txt  LICENSE  Makefile  README.md  index.html  makefile  params.json
cmake/findopencl/: README.md
examples/fd2d/: CMakeLists.txt  README.org  fd2d_nonShared.occa  fd2d_shared.occa  main.cpp  makefile  setuprc
examples/fd2d/libocca/: cpuFunction.hpp  cuFunction.hpp  cuHelper.hpp  occa.hpp  occaCLdefines.hpp  occaCPUdefines.hpp  occaOpenMPdefines.hpp
examples/simple/: CMakeLists.txt  simple.c  simple.cpp  simple.f90  simple.occa
experimental/: README  add.occa  main.cpp  makefile  setuprc
experimental/include/: occaBase.hpp  occaCUDA.hpp  occaCUDADefines.hpp  occaDefines.hpp  occaKernelDefines.hpp  occaOpenCL.hpp  occaOpenCLDefines.hpp  occaOpenMP.hpp  occaOpenMPDefines.hpp
experimental/scripts/: main.cpp  makefile
experimental/src/: occaBase.cpp  occaCUDA.cpp  occaKernelDefines.cpp  occaOpenCL.cpp  occaOpenMP.cpp  occaTools.cpp
libocca/: clFunction.hpp  clHelper.hpp  clKernel.hpp  cpuFunction.hpp  cpuHelper.hpp  cuFunction.hpp  cuHelper.hpp  dummyArg.hpp  genFunction.hpp  occa.cpp  occa.hpp  occaCPUdefines.hpp  occaCUdefines.hpp  occaMacros.hpp  occaPods.hpp
liboccac/: occac.cpp  occac.h
liboccaf/: occaf.c  occaf.f90  occafFstring.h  occafFunctions.f90  occafTypes.f90
